objects/Partner_Shipping_Option__c.object
<CustomObject><fields>
        <fullName>Carrier__c</fullName>
        <globalPicklist>Carrier</globalPicklist>
        <label>Carrier</label>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Default_Price__c</fullName>
        <description>Default Price for Shipping with this option.</description>
        <inlineHelpText>Default Price for Shipping with this option.</inlineHelpText>
        <label>Default Shipping Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields><fields>
        <fullName>Rate_10_kits__c</fullName>
        <description>Rate for indicated number of kits</description>
        <inlineHelpText>Rate for indicated number of kits</inlineHelpText>
        <label>Rate (10 kits)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields><fields>
        <fullName>Rate_11_kits__c</fullName>
        <description>Rate for indicated number of kits</description>
        <inlineHelpText>Rate for indicated number of kits</inlineHelpText>
        <label>Rate (11 kits)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields><fields>
        <fullName>Rate_12_kits__c</fullName>
        <description>Rate for indicated number of kits</description>
        <inlineHelpText>Rate for indicated number of kits</inlineHelpText>
        <label>Rate (12 kits)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields><fields>
        <fullName>Rate_1_kit__c</fullName>
        <description>Rate for indicated number of kits</description>
        <inlineHelpText>Rate for indicated number of kits</inlineHelpText>
        <label>Rate (1 kit)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields><fields>
        <fullName>Service_Level__c</fullName>
        <globalPicklist>Service_Level</globalPicklist>
        <label>Service Level</label>
        <type>Picklist</type>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><description>Captures partner shipping options and pricing.</description><enableActivities>false</enableActivities><enableBulkApi>true</enableBulkApi><enableFeeds>false</enableFeeds><enableHistory>true</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><label>Partner Shipping Option</label><nameField>
        <displayFormat>SHP{00000}</displayFormat>
        <label>PartnerShippingOptions Name</label>
        <type>AutoNumber</type>
    </nameField><pluralLabel>Partner Shipping Options</pluralLabel><sharingModel>ControlledByParent</sharingModel></CustomObject>